--- a/ItemStoreForSimpleAdventureGame/appsettings.json
+++ b/ItemStoreForSimpleAdventureGame/appsettings.json
@@ -5,12 +5,12 @@
     "DatabaseName": "ItemStoreAPI"
   },
   "PlayerDatabaseSettings": {
-    "ItemStoreCollectionName": "Players",
+    "PlayerCollectionName": "Players",
     "ConnectionString": "mongodb+srv://root:123@cluster0.pchwk.mongodb.net/ItemStoreAPI?retryWrites=true&w=majority",
     "DatabaseName": "ItemStoreAPI"
   },
   "BackpackDatabaseSettings": {
-    "ItemStoreCollectionName": "Backpack",
+    "BackpackCollectionName": "Backpack",
     "ConnectionString": "mongodb+srv://root:123@cluster0.pchwk.mongodb.net/ItemStoreAPI?retryWrites=true&w=majority",
     "DatabaseName": "ItemStoreAPI"
   },
