--- a/ItemStoreForSimpleAdventureGame/appsettings.json
+++ b/ItemStoreForSimpleAdventureGame/appsettings.json
@@ -21,6 +21,6 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "https_port":  443,
+  //"https_port":  443,
   "AllowedHosts": "*"
 }
