--- a/ItemStoreForSimpleAdventureGame/appsettings.json
+++ b/ItemStoreForSimpleAdventureGame/appsettings.json
@@ -16,11 +16,10 @@
   },
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
+      "Default": "Trace",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  //"https_port":  443,
   "AllowedHosts": "*"
 }
